Create cqf-fhir-cr-hapi as a copy of hapi-fhir's hapi-fhir-storage-cr and cqf-fhir-cr-test to eliminate test-jar (#633)
* Create cqf-fhir-cr-hapi as a copy of hapi-fhir's hapi-fhir-storage-cr.   Decommission the test-jar dependency from cqf-fhir-cr tp cqf-fhir-benchmark by creating a new cqf-fhir-cr-test module.  Within the new module, maintain the classes and resources used directly or indirectly by cqf-fhir-benchmark.  This means that we won't get test-jar weirdness in any new pipeline code.

* Add interfaces on top of R4CareGapsProcessor and R4CareGapsService.

* Add correct TODO comment.

* Delete almost all tests and associated test resources.

* Remove bad tests and resources

* Allow null subject parameter

* Restore dstu3 tests.

* Restore DataRequirementsTest.

* Restore ActivityDefinitionOperationsProviderTest.

* Restore QuestionnaireResponseOperationsProviderTest.

* Reintroduce all tests, but disable conformance checking for all R4 server tests.

* Spotless.

* Slight tweaks.

* Improvement from hapi-fhir.

* Fix sonar issues.

* More sonar issues.

* Ensure ICareGapsServiceFactory returns an R4CareGapsServiceInterface.

* Change HAPI operation provider tests to ITs

* Sonar.

* cleanup sonar issues

* cleanup sonar issues

* cleanup sonar issues

* Change pom description for cqf-fhir-cr-hapi.

* Try to fix some of the failing cqf-fhir-cr-test tests.

* Fix all but 2 tests.

* Fix more sonar warnings.

* Spotless.

* Fix PlanDef IT's and allow IT's to use test resources

* fix test resources

* Fix more Sonar warnings.

* Fix another test.

* fix tests

* fix style

* spotless

* remove unused test resources

* sonar issues

* spotless

* sonar issues

* fix plandef IT

* cleanup

* spotless

* Fix sonar issues.

* More sonar fixes.

* Even more sonar fixes.

* Spotless.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar.

* More Sonar and test.

* Add tests to address test coverage.

-